// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`----- Select Component ----- Base Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Disabled Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select select--disabled"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        disabled=""
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Filterable Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="Type to filter..."
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Icon Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value=""
      />
      <span
        class="select__icn icn icn--md"
        title="Search"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Initial Value Multi Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value="2 Selected"
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Initial value Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="Option One"
        readonly=""
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Multi Filterable Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="0 Selected"
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Multi Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value="0 Selected"
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Multi Tags Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value="0 Selected"
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Optional Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="-- Select --"
        readonly=""
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Placeholder Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="Custom Placeholder"
        readonly=""
        value=""
      />
      <span
        class="select__icn icn icn--sm"
        title="Chevron-down"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- Select Component ----- Searchable Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="select"
    data-testid="Select"
    tabindex="-1"
  >
    <div
      style="position: relative;"
    >
      <input
        autocomplete="off"
        class="select__input"
        data-testid="Select-input"
        id="Select"
        name="Select"
        placeholder="Type to search..."
        value=""
      />
      <span
        class="select__icn icn icn--md"
        title="Search"
      />
    </div>
  </div>
</DocumentFragment>
`;
